--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.11",
+    "@angular/cdk": "^12.0.0",
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
     "@angular/core": "~11.2.11",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~11.2.11",
     "@angular/localize": "~11.2.11",
     "@angular/platform-browser": "~11.2.11",
@@ -23,6 +25,8 @@
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "bootstrap": "^4.5.0",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
