--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "ngx-pagination": "^5.1.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
