--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "ngx-pagination": "^5.1.1",
     "path": "^0.12.7",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
