--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [
+              "rxjs/add/operator/do"
+           ],
             "outputPath": "dist/front-endtodolist",
             "index": "src/index.html",
             "main": "src/main.ts",
