--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@juggle/resize-observer": "^3.3.1",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
-    "apexcharts": "^3.27.2",
     "bootstrap": "^4.6.0",
+    "echarts": "^5.1.2",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "ngx-echarts": "^7.0.1",
     "ngx-pagination": "^5.1.1",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
