--- a/package.json
+++ b/package.json
@@ -3,35 +3,41 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "dev": "ng serve",
-    "build": "ng build",
+    "start": "npm run serve:ssr",
+    "dev": "npm run dev:ssr",
+    "build": "npm run build:ssr",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run front-endtodolist:serve-ssr",
+    "serve:ssr": "node dist/front-endtodolist/server/main.js",
+    "build:ssr": "ng build --prod && ng run front-endtodolist:server:production",
+    "prerender": "ng run front-endtodolist:prerender"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.11",
-    "@angular/cdk": "^12.0.0",
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
     "@angular/core": "~11.2.11",
-    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~11.2.11",
     "@angular/localize": "~11.2.11",
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
+    "@angular/platform-server": "~11.2.11",
     "@angular/router": "~11.2.11",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@juggle/resize-observer": "^3.3.1",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "@nguniversal/express-engine": "^11.2.1",
     "bootstrap": "^4.6.0",
     "echarts": "^5.1.2",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "localstorage-polyfill": "^1.0.1",
+    "mock-browser": "^0.92.14",
     "moment": "^2.29.1",
     "ngx-echarts": "^7.0.1",
     "ngx-pagination": "^5.1.1",
@@ -46,6 +52,8 @@
     "@angular-devkit/build-angular": "~0.1102.10",
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
