--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "npm run serve:ssr",
     "dev": "npm run dev:ssr",
-    "build": "npm run build:ssr",
+    "build": "npm run build:ssr && npm run prerender",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
